--- a/PlaceWallet/Views/Shared/_Layout.cshtml
+++ b/PlaceWallet/Views/Shared/_Layout.cshtml
@@ -30,9 +30,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <!--
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    -->
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -42,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - PlaceWallet</p>
+            <p>&copy; @DateTime.Now.Year - PlaceWallet</p>
         </footer>
     </div>
 
